--- a/期末大作业-云计算技术(2)/期末大作业-云计算技术/期末大作业-云计算技术/report/《云计算技术》期末大作业报告.md
+++ b/期末大作业-云计算技术(2)/期末大作业-云计算技术/期末大作业-云计算技术/report/《云计算技术》期末大作业报告.md
@@ -147,7 +147,7 @@
   
   - 输出/结果（截图/日志）：
   
-    ![image-20251230161417121](D:\homework\ICT\期末大作业-云计算技术\期末大作业-云计算技术\assets\截图\image-20251230161417121.png)
+    ![image-20251230161417121](./assets/截图/image-20251230161417121.png)
   
 - 步骤 2：编写后端 Dockerfile（Node.js 示例）
 
