--- a/期末大作业-云计算技术(2)/期末大作业-云计算技术/期末大作业-云计算技术/report/《云计算技术》期末大作业报告.md
+++ b/期末大作业-云计算技术(2)/期末大作业-云计算技术/期末大作业-云计算技术/report/《云计算技术》期末大作业报告.md
@@ -170,7 +170,7 @@
 
   - 参数解释：基于Node.js 18 Alpine镜像的后端应用Docker配置文件，通过分层复制依赖文件和源代码来优化构建缓存，最终暴露5000端口运行app.js应用。
 
-  - 输出/结果（截图/日志）：![image-20251230163153007](D:\homework\ICT\期末大作业-云计算技术\期末大作业-云计算技术\assets\截图\image-20251230163153007.png)
+  - 输出/结果（截图/日志）：![image-20251230163153007](../assets/截图/image-20251230163153007.png)
 
 - 步骤 3：编写 docker-compose.yml 编排服务
 
@@ -224,9 +224,9 @@
 
   - 参数解释：定义MySQL数据库、Node.js后端和前端服务的Docker Compose配置，通过自定义bridge网络实现三个服务间的通信，并使用数据卷持久化数据库文件。
 
-  - 输出/结果（截图/日志）：![image-20251230163403457](D:\homework\ICT\期末大作业-云计算技术\期末大作业-云计算技术\assets\截图\image-20251230163403457.png)
+  - 输出/结果（截图/日志）：![image-20251230163403457](../assets/截图/image-20251230163403457.png)
 
-    ![image-20251230163442654](D:\homework\ICT\期末大作业-云计算技术\期末大作业-云计算技术\assets\截图\image-20251230163442654.png)
+    ![image-20251230163442654](../assets/截图/image-20251230163442654.png)
 
 - 步骤 4：启动服务
 
@@ -240,7 +240,7 @@
 
   - 参数解释：通过执行`docker compose up -d`命令，以前台分离模式启动整个多容器应用栈，让MySQL数据库、Node.js后端和前端服务在后台协同运行。
 
-  - 输出/结果（截图/日志）：![image-20251230163541099](D:\homework\ICT\期末大作业-云计算技术\期末大作业-云计算技术\assets\截图\image-20251230163541099.png)
+  - 输出/结果（截图/日志）：![image-20251230163541099](../assets/截图/image-20251230163541099.png)
 
 #### 6.3 关键配置文件
 
@@ -268,10 +268,10 @@
   
   | 用例 | 输入/操作                            | 预期结果                 | 实际结果                                                     |
   | ---- | ------------------------------------ | ------------------------ | ------------------------------------------------------------ |
-  | 1    | 访问 `http://localhost:8080 `        | 显示前端页面             | ![image-20260103184719687](D:\homework\ICT\期末大作业-云计算技术\期末大作业-云计算技术\assets\截图\image-20260103184719687.png) |
-  | 2    | 后端 API 调用（如 `GET /api/users`） | 返回 JSON 数据           | ![image-20260103184734179](D:\homework\ICT\期末大作业-云计算技术\期末大作业-云计算技术\assets\截图\image-20260103184734179.png) |
-  | 3    | 停止服务后重启                       | 数据不丢失，服务正常启动 | ![image-20260103184837377](D:\homework\ICT\期末大作业-云计算技术\期末大作业-云计算技术\assets\截图\image-20260103184837377.png) |
-  | 4    | 日志采集                             | 一键启动/停止脚本        | ![image-20260103185146223](D:\homework\ICT\期末大作业-云计算技术\期末大作业-云计算技术\assets\截图\image-20260103185146223.png) |
+  | 1    | 访问 `http://localhost:8080 `        | 显示前端页面             | ![image-20260103184719687](../assets/截图/image-20260103184719687.png) |
+  | 2    | 后端 API 调用（如 `GET /api/users`） | 返回 JSON 数据           | ![image-20260103184734179](../assets/截图/image-20260103184734179.png) |
+  | 3    | 停止服务后重启                       | 数据不丢失，服务正常启动 | ![image-20260103184837377](../assets/截图/image-20260103184837377.png) |
+  | 4    | 日志采集                             | 一键启动/停止脚本        | ![image-20260103185146223](../assets/截图/image-20260103185146223.png) |
   
 - **关键截图/输出**：
 
