--- a/期末大作业-云计算技术(2)/期末大作业-云计算技术/期末大作业-云计算技术/report/《云计算技术》期末大作业报告.md
+++ b/期末大作业-云计算技术(2)/期末大作业-云计算技术/期末大作业-云计算技术/report/《云计算技术》期末大作业报告.md
@@ -344,10 +344,10 @@
 
 | 模块/任务 | 负责人 | 贡献说明（commit/截图/文档链接） |
 |---|---|---|
-| 环境搭建和核心实现 | 付波 |  |
-| PPT和文档制作 | 夏晨博 | ![image-20260104224034084](C:\Users\User\AppData\Roaming\Typora\typora-user-images\image-20260104224034084.png) |
-| 答辩与验证 | 张挺 | <img src="D:\homework\ICT\期末大作业-云计算技术\期末大作业-云计算技术\assets\截图\image-20260103184719687.png" alt="image-20260103184719687" style="zoom:25%;" /> |
-| 验证 | 叶子衡 | <![image-20251230163541099](../assets/截图/image-20251230163541099.png) {: width="25%"}|
+| 环境搭建和核心实现 | 付波 | ![屏幕截图 2026-01-04 232851](../assets/截图/屏幕截图 2026-01-04 232851.png) |
+| PPT和文档制作 | 夏晨博 | ![屏幕截图 2026-01-04 233114](../assets/截图/屏幕截图 2026-01-04 233114.png) |
+| 答辩与验证 | 张挺 | ![image-20260103184719687](../assets/截图/image-image-20260103184719687.png) |
+| 验证 | 叶子衡 | ![image-20260103184719687](../assets/截图/image-image-20260103184719687.png) |
 | 排错 | 陈炎浩 | |
 
 ---
